--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-# Byte-compiled / optimized / DLL files
+ Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 .idea
 .replit
-
+token.txt
 # C extensions
 *.so
 
