--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,30 @@
+aiofiles==0.6.0
 aiohttp==3.7.4.post0
+aiosqlite==0.17.0
+async-generator==1.10
 async-timeout==3.0.1
+asyncio-extras==1.3.2
 attrs==21.2.0
-certifi==2021.5.30
-cffi==1.14.6
+certifi==2021.10.8
+cffi==1.15.0
 chardet==4.0.0
-charset-normalizer==2.0.6
+charset-normalizer==2.0.7
 ffmpeg==1.4
+greenlet==1.1.2
 html2text==2020.1.16
-idna==3.2
+idna==3.3
 Markdown==3.3.4
+msgpack==1.0.2
 multidict==5.2.0
 nextcord==2.0.0a3
 pycparser==2.20
 PyNaCl==1.4.0
+pynvim==0.4.3
 requests==2.26.0
 six==1.16.0
 typing-extensions==3.10.0.2
+update-checker==0.18.0
 urllib3==1.26.7
-yarl==1.6.3
+websocket-client==1.2.1
+yarl==1.7.0
 youtube-dl==2021.6.6
-nextcord[voice]==2.0.0a3
