--- a/Configs/holidayconfig.yml
+++ b/Configs/holidayconfig.yml
@@ -14,14 +14,22 @@ bonus_xp: 1.5
 #                                    Dates
 # ======================================================================================
 
+easter_start_date: "April 1st"
+
 # When do you expect to end the easter event? (DAY MONTH - Don't worry about year, it's already handled for you)
 easter_end_date: "May 1st"
+
+summer_start_date: "June 1st"
 
 # When do you expect to end the summer event? (DAY MONTH - Don't worry about year, it's already handled for you)
 summer_end_date: "August 1st"
 
+halloween_start_date: "October 1st"
+
 # When do you expect to end the summer event? (DAY MONTH - Don't worry about year, it's already handled for you)
 halloween_end_date: "November 1st"
+
+christmas_start_date: "December 1st"
 
 # When do you expect to end the summer event? (DAY MONTH - Don't worry about year, it's already handled for you)
 christmas_end_date: "January 1st"
