--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ __pycache__/
 # C extensions
 *.so
 
-levels/
 pl_dictionary.1py
 
 # Distribution / packaging
@@ -139,3 +138,4 @@ dmypy.json
 # Vscode things
 .vscode
 token.txt
+password.txt
