--- a/Configs/config.yml
+++ b/Configs/config.yml
@@ -8,7 +8,7 @@
 Prefix: "$"
 
 # Set what the bot is currently playing
-bot_status_text: "[$] | Dead"
+bot_status_text: "[$] | ALL I WANT FOR CHRISTMAS IS YOU"
 
 # IDLE, DND, ONLINE, OFFLINE
 bot_activity: online
@@ -32,7 +32,6 @@ level_for_clan: 1
 # ======================================================================================
 #                                   VOCAL XP
 # ======================================================================================
-# NOTE: REQUIRES VOCAL SYSTEM ADDON! DOWNLOAD FROM GITHUB REPOSITORY
 
 # How long until a user is granted their xp (e.g 60 = 1 minute)
 time_for_xp: 60
@@ -78,18 +77,11 @@ error_embed_color: 0x4863A0
 # Success Embed color | Must Be Hex Notation
 success_embed_color: 0x4863A0
 
-
 # ======================================================================================
-#                                     HELP
+#                                 WELCOME MESSAGES
 # ======================================================================================
-# True/False - <prefix>help command
-# NOTE: REQUIRES Extras+ ADDON!
-help_command: True
+# Welcome channel ID
+WELCOME_CHANNEL_ID: 846940613478973453
 
-
-# ======================================================================================
-#                                    THE END
-# ======================================================================================
-
-
-
+# Rules channel ID
+RULES_CHANNEL: 8489807357542400
